mobile side gap fix

--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -67,7 +67,6 @@
       &-description {
         font-size: 2rem;
         padding: 2rem 5rem;
-        width: 80%;
         font-family: 'Open Sans', sans-serif;
         font-weight: 300;
         text-align: justify;
